--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.263.1",
     "next": "13.4.12",
     "openai": "^3.3.0",
